@@ -38,11 +38,6 @@
 // Default minimum amount of data to return from a read request
 size_t const dvrstream::DEFAULT_READ_MINCOUNT = (4 KiB);
 
-// dvrstream::DEFAULT_READ_TIMEOUT_MS (static)
-//
-// Default amount of time for a read operation to succeed
-unsigned int const dvrstream::DEFAULT_READ_TIMEOUT_MS = 2500;
-
 // dvrstream::DEFAULT_RINGBUFFER_SIZE (static)
 //
 // Default ring buffer size, in bytes
@@ -152,11 +147,10 @@ inline uint32_t read_be32(uint8_t const* ptr)
 //	url				- URL of the stream to be opened
 //	buffersize		- Ring buffer size, in bytes
 //	readmincount	- Minimum bytes to return from a read operation
-//	readtimeout		- Read operation timeout, in millseconds
 
-dvrstream::dvrstream(char const* url, size_t buffersize, size_t readmincount, unsigned int readtimeout) :
+dvrstream::dvrstream(char const* url, size_t buffersize, size_t readmincount) :
 	m_readmincount(std::max(align::down(readmincount, MPEGTS_PACKET_LENGTH), MPEGTS_PACKET_LENGTH)),
-	m_readtimeout(std::max(1U, readtimeout)), m_buffersize(align::up(buffersize, 65536))
+	m_buffersize(align::up(buffersize, 65536))
 {
 	if(url == nullptr) throw std::invalid_argument("url");
 
@@ -300,7 +294,7 @@ time_t dvrstream::currenttime(void) const
 
 std::unique_ptr<dvrstream> dvrstream::create(char const* url)
 {
-	return create(url, DEFAULT_RINGBUFFER_SIZE, DEFAULT_READ_MINCOUNT, DEFAULT_READ_TIMEOUT_MS);
+	return create(url, DEFAULT_RINGBUFFER_SIZE, DEFAULT_READ_MINCOUNT);
 }
 
 //---------------------------------------------------------------------------
@@ -315,7 +309,7 @@ std::unique_ptr<dvrstream> dvrstream::create(char const* url)
 
 std::unique_ptr<dvrstream> dvrstream::create(char const* url, size_t buffersize)
 {
-	return create(url, buffersize, DEFAULT_READ_MINCOUNT, DEFAULT_READ_TIMEOUT_MS);
+	return create(url, buffersize, DEFAULT_READ_MINCOUNT);
 }
 
 //---------------------------------------------------------------------------
@@ -331,24 +325,7 @@ std::unique_ptr<dvrstream> dvrstream::create(char const* url, size_t buffersize)
 
 std::unique_ptr<dvrstream> dvrstream::create(char const* url, size_t buffersize, size_t readmincount)
 {
-	return create(url, buffersize, readmincount, DEFAULT_READ_TIMEOUT_MS);
-}
-
-//---------------------------------------------------------------------------
-// dvrstream::create (static)
-//
-// Factory method, creates a new dvrstream instance
-//
-// Arguments:
-//
-//	url				- URL of the stream to be opened
-//	buffersize		- Ring buffer size, in bytes
-//	readmincount	- Minimum bytes to return from a read operation
-//	readtimeout		- Read operation timeout, in millseconds
-
-std::unique_ptr<dvrstream> dvrstream::create(char const* url, size_t buffersize, size_t readmincount, unsigned int readtimeout)
-{
-	return std::unique_ptr<dvrstream>(new dvrstream(url, buffersize, readmincount, readtimeout));
+	return std::unique_ptr<dvrstream>(new dvrstream(url, buffersize, readmincount));
 }
 
 //---------------------------------------------------------------------------
@@ -656,9 +633,6 @@ size_t dvrstream::read(uint8_t* buffer, size_t count)
 	assert(m_readmincount == align::down(m_readmincount, MPEGTS_PACKET_LENGTH));
 	assert(m_readmincount >= MPEGTS_PACKET_LENGTH);
 
-	// Verify that the read timeout is at least one millisecond
-	assert(m_readtimeout >= 1U);
-
 	if(count >= m_buffersize) throw std::invalid_argument("count");
 	if(count == 0) return 0;
 
@@ -889,7 +863,7 @@ bool dvrstream::transfer_until(std::function<bool(void)> predicate)
 	CURLMcode curlmresult = curl_multi_perform(m_curlm, &numfds);
 	while((curlmresult == CURLM_OK) && (!m_paused) && (numfds > 0) && (predicate() == false)) {
 
-		curlmresult = curl_multi_wait(m_curlm, nullptr, 0, m_readtimeout, &numfds);
+		curlmresult = curl_multi_wait(m_curlm, nullptr, 0, 500, &numfds);
 		if(curlmresult == CURLM_OK) curlmresult = curl_multi_perform(m_curlm, &numfds);
 	}
 
